--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <a href="#">link 3 </a><br>
       <a href="#">link 4 </a><br>
       <a href="#">link 5 </a><br>
+        <a href="#">link 6 </a><br>
     </nav>
 
     <main>
